# git-uncommitted-scanner

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: publish.yml
git_scanner/: main.py  maincli.py  tui_app.py
