[build-system]
requires = ["setuptools>=61.0, <75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-uncommitted-scanner"
version = "0.1.3"
description = "A lightweight CLI to scan for uncommitted Git repositories."
readme = "README.md"
requires-python = ">=3.9"
# ➔ Using PEP 621 format for broader compatibility
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.50.0"
]

[project.urls]
Homepage = "https://github.com/RootDeveloperDS/git-uncommitted-scanner"
Repository = "https://github.com/RootDeveloperDS/git-uncommitted-scanner"
"Bug Tracker" = "https://github.com/RootDeveloperDS/git-uncommitted-scanner/issues"

[project.scripts]
# This exposes the CLI globally. 
# Usage: user types 'scanrepos' -> it runs app() in main.py
scanrepos = "git_scanner.main:app" 
